--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@types/node": "18.16.0",
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
+    "apexcharts": "^3.40.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "next": "13.3.1",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^8.0.5",
