--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
     "apexcharts": "^3.40.0",
+    "axios": "^1.4.0",
     "cookies-next": "^2.1.1",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
