--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-paystack": "^4.0.3",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^8.0.5",
     "react-slick": "^0.29.0",
