--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "cookies-next": "^2.1.1",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
-    "next": "13.3.1",
+    "next": "^13.3.1",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
@@ -38,5 +38,8 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.1"
+  },
+  "engines": {
+    "node": "18.X"
   }
 }
